adding the card_set parameter
